--- a/views/home.html
+++ b/views/home.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza King</title>
     <!-- Favicon  -->
-    <link rel="Icon" href="images\pizza-king-favicon.jpg">
+    <link rel="Icon" href="images/pizza-king-favicon.jpg">
     <!-- Stylesheet -->
-     <link rel="stylesheet" href="pizza-styles.css">
+     <link rel="stylesheet" href="styles/pizza-styles.css">
 </head>
 <body>
     <main>
         <header>
-            <img src="images\pizza-king-favicon.jpg" alt="pizza king logo">
+            <img src="images/pizza-king-favicon.jpg" alt="pizza king logo">
 
             <h1>Pizza King</h1>
             <p id="tagline" >Where you can eat pizza like royalty!</p>
