--- a/public/styles/pizza-styles.css
+++ b/public/styles/pizza-styles.css
@@ -31,6 +31,16 @@ main {
     color: white;
     font-size: 1rem;
 }
+#orderAgain-button {
+    border: none;
+    background-color: darkgreen;
+    border-color: darkgreen;
+    padding: .5rem .75rem;
+    border-radius: .25rem;
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+}
 
 /* Header styles */
 
@@ -98,4 +108,8 @@ label {
     #main {
         width: 90%;
     }
+}
+.error{
+    color: red;
+    display: none;
 }
